--- a/index.html
+++ b/index.html
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF--8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/qbit.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>qbit LM</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      /* Custom scrollbar for a more modern look */
-      ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #f1f5f9; /* slate-100 */
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #94a3b8; /* slate-400 */
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #64748b; /* slate-500 */
-      }
-    </style>
   <script type="importmap">
 {
   "imports": {
@@ -30,16 +12,17 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0",
-    "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
-    "pdf-lib": "https://aistudiocdn.com/pdf-lib@^1.17.1",
-    "pdfjs-dist/build/pdf.mjs": "https://aistudiocdn.com/pdfjs-dist@^4.4.168/build/pdf.mjs",
-    "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^5.4.149/"
+    "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^5.4.149/",
+    "vite": "https://aistudiocdn.com/vite@^7.1.5",
+    "jspdf": "https://aistudiocdn.com/jspdf@^3.0.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
+    "pdf-lib": "https://aistudiocdn.com/pdf-lib@^1.17.1"
   }
 }
 </script>
 </head>
   <body class="bg-white text-gray-800">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
