--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/qbit.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>qbit LM</title>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0",
-    "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^5.4.149/",
-    "vite": "https://aistudiocdn.com/vite@^7.1.5",
     "jspdf": "https://aistudiocdn.com/jspdf@^3.0.2",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
-    "pdf-lib": "https://aistudiocdn.com/pdf-lib@^1.17.1"
+    "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^5.4.149/",
+    "pdf-lib": "https://aistudiocdn.com/pdf-lib@^1.17.1",
+    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.149",
+    "vite": "https://aistudiocdn.com/vite@^7.1.5",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2"
   }
 }
 </script>
